# page_view_counter_real_time

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/static/js/: index.js
templates/: index.html.tera  index2.html.tera
